--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1234,6 +1234,65 @@
 }
 
 // === / IMAGINE ===
+// === SHALL ===
+.shall {
+    .section-inner {
+        max-width: $base*218.5;
+    }
+    &-wrapper {}
+    &-top {}
+    .title {
+        text-align: center;
+        margin-bottom: $base*12.5;
+    }
+    &-items {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 25%;
+        &__number {
+            @include NextArt;
+            font-weight: $fw-heavy;
+            font-size: 40px;
+            line-height: 34px;
+            letter-spacing: 0.02em;
+            color: $color-white;
+            width: $base*17.5;
+            height: $base*17.5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
+            margin-bottom: $base*5;
+            &--green {
+                background-color: #236967;
+            }
+            &--yellow {
+                background-color: #FFCC1A;
+            }
+            &--orange {
+                background-color: #FC8B4C;
+            }
+            &--red {
+                background-color: #FE7167;
+            }
+        }
+        &__text {
+            text-align: center;
+            font-weight: $fw-medium;
+            font-size: $fs-m;
+            line-height: 30px;
+            color: $color-secondary-200;
+        }
+    }
+}
+
+// === / SHALL ===
 // === FOOTER ===
 .footer {
     background-color: $color-secondary-50;
