added adaptive for section Why-speak

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -462,7 +462,7 @@
         &-images img {
             border-radius: 50%;
             max-width: $base*10;
-            width: 100%;
+            // width: 100%;
             max-height: $base*10;
             height: 100%;
             object-fit: cover;
