--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -130,6 +130,21 @@
             padding: 50px 50px;
         }
     }
+    // === WHY-SPEAKY ===
+    .why-speaky {
+        &__content {
+            margin-left: 25px;
+            &--right {
+                margin-left: 10px;
+            }
+        }
+        &__info {
+            flex-basis: 40%;
+        }
+        &__item-text {
+            margin-left: 20px;
+        }
+    }
 }
 
 @media (max-width: 900px) {
@@ -262,6 +277,19 @@
     // == ASSIGNMENT ===
     .assignment--adult .assignment-item+.assignment-item {
         margin-left: 35px;
+    }
+    // === WHY-SPEAKY ===
+    .why-speaky {
+        &__wrapper {
+            flex-direction: column;
+        }
+        &__content {
+            margin-left: 0;
+            margin-top: 40px;
+        }
+        &__item-text {
+            margin-left: 40px;
+        }
     }
 }
 
@@ -541,6 +569,26 @@
             padding: 60px 15px;
         }
     }
+    // === WHY-SPEAKY ===
+    .why-speaky {
+        &__content {
+            align-items: normal;
+            flex-direction: column;
+            &--left {
+                margin-bottom: 20px;
+                max-width: 239px;
+            }
+            &--right {
+                max-width: 323px;
+                margin-left: 0px;
+            }
+        }
+        &__item {
+            &+& {
+                margin-top: 20px;
+            }
+        }
+    }
 }
 
 @media (max-width: 500px) {
@@ -672,6 +720,22 @@
                 font-size: 16px;
                 line-height: 24px;
             }
+        }
+    }
+    // === WHY-SPEAKY ===
+    .why-speaky {
+        .title {
+            font-size: 20px;
+            line-height: 28px;
+            margin-bottom: 20px;
+        }
+        .text {
+            font-size: 14px;
+            line-height: 22px;
+        }
+        &__item-text {
+            font-size: 16px;
+            line-height: 24px;
         }
     }
 }
