--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1175,12 +1175,167 @@
 // === / FOREIGN-LANGUAGES ===
 // === PACKAGES ===
 .packages {
-    &-wrapper {}
-    &-top {
-        margin-bottom: $base*10;
+    .section-outer {
+        padding-bottom: 0px;
     }
-    &-title {
+    &-wrapper {
+        padding-bottom: 140px;
+        height: 457px;
+    }
+    &__top {
         text-align: center;
+        margin-bottom: 87px;
+        &-title {}
+        &-text {}
+    }
+}
+
+.packages__content {
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        transform: translateY(-50%);
+        background-color: #61B5A9;
+        z-index: -1;
+    }
+    &-item {
+        &--active {
+            .packages__content-item-circle {
+                border-color: #689C9A;
+                background-color: #689C9A;
+                box-shadow: 0px 0px 10px 0px rgba(#689C9A, 1);
+            }
+            .packages__content-item-dropdown {
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+        position: relative;
+        &__box {}
+        &-circle {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            border: 2px solid #61B5A9;
+            cursor: pointer;
+            transition: $transition;
+        }
+        &-title {
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 30px;
+            position: absolute;
+            bottom: -44px;
+            left: 0;
+            white-space: nowrap;
+            transform: translateX(calc(-50% + 20px));
+        }
+        &-dropdown {
+            z-index: 10;
+            position: absolute;
+            top: calc(100% + 100px);
+            left: 0;
+            opacity: 0;
+            visibility: hidden;
+            transition: $transition;
+            background-color: #FFECA0;
+            border-radius: 20px;
+            padding: 30px;
+            min-width: 234px;
+            max-width: 234px;
+            transform: translateX(calc(-50% + 20px));
+            &-box {
+                position: relative;
+                &::before {
+                    content: "";
+                    position: absolute;
+                    top: -52px;
+                    left: 34%;
+                    width: 0;
+                    height: 0;
+                    border-style: solid;
+                    border-width: 0 24px 23px 24px;
+                    border-color: transparent transparent #FFECA0 transparent;
+                    border-radius: 2px;
+                }
+                &-list {
+                    white-space: nowrap;
+                }
+            }
+        }
+        &-duration {
+            font-weight: 300;
+            line-height: 26px;
+            letter-spacing: 0.02em;
+            text-align: center;
+        }
+    }
+}
+
+.packages__content-item-time {
+    display: none;
+    &--visible {
+        display: block;
+    }
+}
+
+.packages__lesson {
+    &-radio {
+        &-label {
+            cursor: pointer;
+            display: block;
+            input {
+                display: none;
+            }
+        }
+        &:checked+.packages__lesson-fake::before {
+            opacity: 1;
+        }
+    }
+    &-fake {
+        display: inline-block;
+        width: $base*3;
+        height: $base*3;
+        border-radius: 100%;
+        border: 1px solid $color-primary-50;
+        position: relative;
+        &::after {
+            content: "";
+            position: absolute;
+            width: inherit;
+            height: inherit;
+            border-radius: inherit;
+            border: inherit;
+            filter: blur(0px);
+            top: -1px;
+            left: -1px;
+        }
+        &::before {
+            content: "";
+            position: absolute;
+            width: $base*1.5;
+            height: $base*1.5;
+            background-color: $color-primary-50;
+            border-radius: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            transition: $transition;
+        }
+    }
+    &-text {
+        margin-left: 13px;
+        font-weight: $fw-light;
+        letter-spacing: 0.02em;
+        line-height: 26px;
     }
 }
 
