--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1339,6 +1339,37 @@
     }
 }
 
+.packages-card {
+    background-repeat: no-repeat;
+    background-position: top center;
+    max-width: 300px;
+    width: 100%;
+    border-radius: 30px;
+    background-color: #FFFBED;
+    &__wrapper {
+        padding: 0px 64px 62px 64px;
+        min-height: 440px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+    &__time {
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 30px;
+        margin-bottom: 14px;
+    }
+    &__price {
+        @include NextArt;
+        font-size: 22px;
+        line-height: 30px;
+        margin-bottom: 40px;
+        letter-spacing: 0.02em;
+    }
+    &__btn {}
+}
+
 // === / PACKAGES ===
 // === ARRIVE ===
 .arrive {
