--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1204,6 +1204,7 @@
         transform: translateY(-50%);
         background-color: #61B5A9;
         z-index: -1;
+        border-radius: 2px;
     }
     &-item {
         &--active {
@@ -1211,6 +1212,11 @@
                 border-color: #689C9A;
                 background-color: #689C9A;
                 box-shadow: 0px 0px 10px 0px rgba(#689C9A, 1);
+                &--checked {
+                    box-shadow: 0px 0px 10px 0px rgba(#236967, 1);
+                    border-color: #236967;
+                    background-color: #236967;
+                }
             }
             .packages__content-item-dropdown {
                 opacity: 1;
@@ -1226,6 +1232,7 @@
             border: 2px solid #61B5A9;
             cursor: pointer;
             transition: $transition;
+            background-color: $color-white;
         }
         &-title,
         &-subtitle {
@@ -1288,6 +1295,7 @@
     display: none;
     &--visible {
         display: block;
+        text-align: center;
     }
 }
 
@@ -1296,6 +1304,9 @@
         &-label {
             cursor: pointer;
             display: block;
+            &+& {
+                margin-top: 14px;
+            }
             input {
                 display: none;
             }
