--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -625,7 +625,7 @@
         font-weight: $fw-heavy;
         font-size: $fs-xxl-big;
         //line-height: 28px;
-        color: #FFECA0;
+        color: $color-primary-400;
         letter-spacing: 0.5px;
         z-index: -1;
         position: absolute;
@@ -955,7 +955,7 @@
 // === TRUST ===
 .trust {
     &-wrapper {
-        background: #FFFBED;
+        background: $color-secondary-50;
         border-radius: 70px;
         padding: $base*16.75 $base*16.75;
     }
@@ -1184,7 +1184,7 @@
     }
     &__top {
         text-align: center;
-        margin-bottom: 87px;
+        margin-bottom: $base*21.75;
         &-title {}
         &-text {}
     }
@@ -1202,20 +1202,22 @@
         width: 100%;
         height: 2px;
         transform: translateY(-50%);
-        background-color: #61B5A9;
+        background-color: $color-secondary-300;
         z-index: -1;
-        border-radius: 2px;
+        border-radius: $base/2;
     }
     &-item {
         &--active {
             .packages__content-item-circle {
-                border-color: #689C9A;
-                background-color: #689C9A;
-                box-shadow: 0px 0px 10px 0px rgba(#689C9A, 1);
+                $circle-color: #689C9A;
+                $circle-color--checked: #236967;
+                border-color: $circle-color;
+                background-color: $circle-color;
+                box-shadow: 0px 0px $base*2.5 0px rgba($circle-color, 1);
                 &--checked {
-                    box-shadow: 0px 0px 10px 0px rgba(#236967, 1);
-                    border-color: #236967;
-                    background-color: #236967;
+                    box-shadow: 0px 0px $base*2.5 0px rgba($circle-color--checked, 1);
+                    border-color: $circle-color--checked;
+                    background-color: $circle-color--checked;
                 }
             }
             .packages__content-item-dropdown {
@@ -1226,18 +1228,18 @@
         position: relative;
         &__box {}
         &-circle {
-            width: 30px;
-            height: 30px;
+            width: $base*7.5;
+            height: $base*7.5;
             border-radius: 50%;
-            border: 2px solid #61B5A9;
+            border: $base/2 solid $color-secondary-300;
             cursor: pointer;
             transition: $transition;
             background-color: $color-white;
         }
         &-title,
         &-subtitle {
-            font-weight: 500;
-            font-size: 18px;
+            font-weight: $fw-medium;
+            font-size: $fs-m;
             line-height: 30px;
             position: absolute;
             bottom: -66px;
@@ -1246,7 +1248,7 @@
             transform: translateX(calc(-50% + 20px));
             text-align: center;
             &--view-training {
-                max-width: 122px;
+                max-width: $base*30.5;
             }
         }
         &-dropdown {
@@ -1257,11 +1259,11 @@
             opacity: 0;
             visibility: hidden;
             transition: $transition;
-            background-color: #FFECA0;
-            border-radius: 20px;
+            background-color: $color-primary-400;
+            border-radius: $base*5;
             padding: 30px;
-            min-width: 234px;
-            max-width: 234px;
+            min-width: $base*58.5;
+            max-width: $base*58.5;
             transform: translateX(calc(-50% + 20px));
             &-box {
                 position: relative;
@@ -1273,9 +1275,9 @@
                     width: 0;
                     height: 0;
                     border-style: solid;
-                    border-width: 0 24px 23px 24px;
-                    border-color: transparent transparent #FFECA0 transparent;
-                    border-radius: 2px;
+                    border-width: 0 $base*6 $base*5.75 $base*6;
+                    border-color: transparent transparent $color-primary-400 transparent;
+                    border-radius: $base/2;
                 }
                 &-list {
                     white-space: nowrap;
@@ -1283,7 +1285,7 @@
             }
         }
         &-duration {
-            font-weight: 300;
+            font-weight: $fw-light;
             line-height: 26px;
             letter-spacing: 0.02em;
             text-align: center;
@@ -1305,7 +1307,7 @@
             cursor: pointer;
             display: block;
             &+& {
-                margin-top: 14px;
+                margin-top: $base*3.5;
             }
             input {
                 display: none;
@@ -1348,7 +1350,7 @@
         }
     }
     &-text {
-        margin-left: 13px;
+        margin-left: $base*3.25;
         font-weight: $fw-light;
         letter-spacing: 0.02em;
         line-height: 26px;
@@ -1372,29 +1374,29 @@
 .packages-card {
     background-repeat: no-repeat;
     background-position: top center;
-    max-width: 300px;
+    max-width: $base*75;
     width: 100%;
-    border-radius: 30px;
-    background-color: #FFFBED;
+    border-radius: $base*7.5;
+    background-color: $color-secondary-50;
     &__wrapper {
-        padding: 0px 50px 62px 64px;
-        min-height: 440px;
+        padding: 0px $base*15.25 $base*15.5 $base*16;
+        min-height: $base*110;
         text-align: center;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
     }
     &__time {
-        font-weight: 500;
-        font-size: 18px;
+        font-weight: $fw-medium;
+        font-size: $fs-m;
         line-height: 30px;
-        margin-bottom: 14px;
+        margin-bottom: $base*3.5;
     }
     &__price {
         @include NextArt;
         font-size: 22px;
         line-height: 30px;
-        margin-bottom: 40px;
+        margin-bottom: $base*10;
         letter-spacing: 0.02em;
     }
     &__btn {}
@@ -1620,7 +1622,7 @@
         color: $color-black;
     }
     &-list {
-        font-weight: 300;
+        font-weight: $fw-light;
         font-size: $fs-s;
         line-height: $base*6.5;
         letter-spacing: 0.02em;
