--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -730,6 +730,21 @@
             }
         }
     }
+    // === CONTRACT === 
+    .contract__box {
+        column-count: 1;
+    }
+    .contract-box__content-title {
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .contract-box__сontent-list-item {
+        font-size: 14px;
+        line-height: 22px;
+    }
+    .contract-box__content {
+        margin-top: 60px;
+    }
 }
 
 @media (max-width: 600px) {
